--- a/index.html
+++ b/index.html
@@ -53,6 +53,11 @@
         <h2 class="about-main-title visually-hidden">Our goals and objectives</h2>
         <ul class="about-container">
           <li class="item">
+            <div class="about-icons-container">
+              <svg class="about-icons">
+                <use href="./images/icons.svg#icon-antenna"></use>
+              </svg>
+            </div>
             <h3 class="about-title secondary-subtitle">Strategy</h3>
             <p class="about-text lead">
               Our goal is to identify the business problem to walk away with the
@@ -60,6 +65,11 @@
             </p>
           </li>
           <li class="item">
+            <div class="about-icons-container">
+              <svg class="about-icons">
+                <use href="./images/icons.svg#icon-clock"></use>
+              </svg>
+            </div>
             <h3 class="about-title secondary-subtitle">Punctuality</h3>
             <p class="about-text lead">
               Bring the key message to the brand's audience for the best price
@@ -67,6 +77,11 @@
             </p>
           </li>
           <li class="item">
+            <div class="about-icons-container">
+              <svg class="about-icons">
+                <use href="./images/icons.svg#icon-diagram"></use>
+              </svg>
+            </div>
             <h3 class="about-title secondary-subtitle">Diligence</h3>
             <p class="about-text lead">
               Research and confirm brands that present the strongest digital
@@ -74,6 +89,11 @@
             </p>
           </li>
           <li class="item">
+            <div class="about-icons-container">
+              <svg class="about-icons">
+                <use href="./images/icons.svg#icon-astronaut"></use>
+              </svg>
+            </div>
             <h3 class="about-title secondary-subtitle">Technologies</h3>
             <p class="about-text lead">
               Design practice focused on digital experiences. We bring forth a
@@ -112,6 +132,37 @@
             <div class="team-container">
               <h3 class="team-employee-title headline">Mark Guerrero</h3>
               <p class="team-text lead">Product Designer</p>
+              <ul class="team-soc-list">
+                <li class="team-soc-item">
+                  <a href="" class="team-soc-link">
+                    <svg class="team-icons">
+                      <use href="./images/icons.svg#icon-instagram">
+                      </use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-soc-item">
+                  <a href="" class="team-soc-link">
+                    <svg class="team-icons">
+                      <use href="/images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-soc-item">
+                  <a href="" class="team-soc-link">
+                    <svg class="team-icons">
+                      <use href="/images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-soc-item">
+                  <a href="" class="team-soc-link">
+                    <svg class="team-icons">
+                      <use href="/images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </div>
           </li>
           <li class="team-item">
@@ -120,6 +171,37 @@
             <div class="team-container">
               <h3 class="team-employee-title headline">Tom Ford</h3>
               <p class="team-text lead">Frontend Developer</p>
+              <ul class="team-soc-list">
+                <li class="team-soc-item">
+                  <a href="" class="team-soc-link">
+                    <svg class="team-icons">
+                      <use href="./images/icons.svg#icon-instagram">
+                      </use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-soc-item">
+                  <a href="" class="team-soc-link">
+                    <svg class="team-icons">
+                      <use href="/images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-soc-item">
+                  <a href="" class="team-soc-link">
+                    <svg class="team-icons">
+                      <use href="/images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-soc-item">
+                  <a href="" class="team-soc-link">
+                    <svg class="team-icons">
+                      <use href="/images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </div>
           </li>
           <li class="team-item">
@@ -128,6 +210,37 @@
             <div class="team-container">
               <h3 class="team-employee-title headline">Camila Garcia</h3>
               <p class="team-text lead">Marketing</p>
+              <ul class="team-soc-list">
+                <li class="team-soc-item">
+                  <a href="" class="team-soc-link">
+                    <svg class="team-icons">
+                      <use href="./images/icons.svg#icon-instagram">
+                      </use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-soc-item">
+                  <a href="" class="team-soc-link">
+                    <svg class="team-icons">
+                      <use href="/images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-soc-item">
+                  <a href="" class="team-soc-link">
+                    <svg class="team-icons">
+                      <use href="/images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-soc-item">
+                  <a href="" class="team-soc-link">
+                    <svg class="team-icons">
+                      <use href="/images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </div>
           </li class="team-item">
           <li class="team-item">
@@ -136,20 +249,132 @@
             <div class="team-container">
               <h3 class="team-employee-title headline">Daniel Wilson</h3>
               <p class="team-text lead">UI Designer</p>
+              <ul class="team-soc-list">
+                <li class="team-soc-item">
+                  <a href="" class="team-soc-link">
+                    <svg class="team-icons">
+                      <use href="./images/icons.svg#icon-instagram">
+                      </use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-soc-item">
+                  <a href="" class="team-soc-link">
+                    <svg class="team-icons">
+                      <use href="/images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-soc-item">
+                  <a href="" class="team-soc-link">
+                    <svg class="team-icons">
+                      <use href="/images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-soc-item">
+                  <a href="" class="team-soc-link">
+                    <svg class="team-icons">
+                      <use href="/images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </div>
           </li>
         </ul>
       </div>
     </section>
+    <section class="customers">
+      <div class="container">
+        <h2 class="custemers-title">Customers</h2>
+        <ul class="customers-list">
+          <li class="customers-list-item">
+            <a href="" class="customers-list-link">
+              <svg width="41" height="47" class="customers-list-icons">
+                <use href="./images/icons.svg#icon-logo-1"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="customers-list-item">
+            <a href="" class="customers-list-link">
+              <svg width="40" height="52" class="customers-list-icons">
+                <use href="./images/icons.svg#icon-logo-2" class="e"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="customers-list-item">
+            <a href="" class="customers-list-link">
+              <svg width="44" height="41" class="customers-list-icons"">
+                  <use href=" ./images/icons.svg#icon-logo-3"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="customers-list-item">
+            <a href="" class="customers-list-link">
+              <svg width="84" height="41" class="customers-list-icons"">
+                  <use href=" ./images/icons.svg#icon-logo-4"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="customers-list-item">
+            <a href="" class="customers-list-link">
+              <svg width="63" height="45" class="customers-list-icons"">
+                  <use href=" ./images/icons.svg#icon-logo-5"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="customers-list-item"><a href="">
+              <a href="" class="customers-list-link">
+                <svg width="94" height="44" class="customers-list-icons"">
+                    <use href=" ./images/icons.svg#icon-logo-6"></use>
+                </svg>
+              </a>
+        </ul>
+      </div>
+    </section>
   </main>
   <footer class="footer main-brg-text">
-    <div class="container">
-      <div class="container-footer">
+    <div class="container container-footer">
+      <div class="footer-logo">
         <a href="./index.html" class="logo">web<span class="logo logo-text-footer">Studio</span></a>
         <p class="footer-text">
           Increase the flow of customers and sales for your business with digital
           marketing & growth solutions.
         </p>
+      </div>
+      <div class="footer-soc">
+        <p class="footer-soc-text">Social media</p>
+        <ul class="footer-soc-list">
+          <li class="footer-soc-item">
+            <a class="footer-soc-link">
+              <svg class="footer-icons">
+                <use href="/images/icons.svg#icon-instagram-footer"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-soc-item">
+            <a class="footer-soc-link">
+              <svg class="footer-icons">
+                <use href="/images/icons.svg#icon-twitter-footer"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-soc-item">
+            <a class="footer-soc-link">
+              <svg class="footer-icons">
+                <use href="/images/icons.svg#icon-facebook-footer"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-soc-item">
+            <a class="footer-soc-link">
+              <svg class="footer-icons">
+                <use href="/images/icons.svg#icon-linkedin-footer"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
       </div>
     </div>
   </footer>
