--- a/portfolio.html
+++ b/portfolio.html
@@ -57,10 +57,10 @@
         </ul>
 
         <ul class="project-list-jobs">
-          <li>
-            <a href="" target="_blank" rel="noopener noreferrer nofollow"><img src="./images/our-works/our-works-1.jpg"
-                alt="application" width="360" height="300" />
-              <div class="container-description">
+          <li class="project-list-item">
+            <a href="" target="_blank" rel="noopener noreferrer nofollow" class="project-list-link">
+              <img src="./images/our-works/our-works-1.jpg" alt="application" width="360" height="300" />
+              <div class="project-container-description">
                 <h2 class="projects-subtitle headline">
                   Banking App Interface Concept
                 </h2>
@@ -68,55 +68,55 @@
               </div>
             </a>
           </li>
-          <li>
-            <a href="" target="_blank" rel="noopener noreferrer nofollow"><img src="./images/our-works/our-works-2.jpg"
-                alt="marketing photo" width="360" height="300" />
-              <div class="container-description">
+          <li class="project-list-item">
+            <a href="" target="_blank" rel="noopener noreferrer nofollow" class="project-list-link">
+              <img src="./images/our-works/our-works-2.jpg" alt="marketing photo" width="360" height="300" />
+              <div class="project-container-description">
                 <h2 class="projects-subtitle headline">Cashless Payment</h2>
                 <p class="projects-text lead">Marketing</p>
               </div>
             </a>
           </li>
-          <li>
-            <a href="" target="_blank" rel="noopener noreferrer nofollow"><img src="./images/our-works/our-works-3.jpg"
-                alt="application" width="360" height="300" />
-              <div class="container-description">
+          <li class="project-list-item">
+            <a href="" target="_blank" rel="noopener noreferrer nofollow" class="project-list-link">
+              <img src="./images/our-works/our-works-3.jpg" alt="application" width="360" height="300" />
+              <div class="project-container-description">
                 <h2 class="projects-subtitle headline">Meditation App</h2>
                 <p class="projects-text lead">App</p>
               </div>
             </a>
           </li>
-          <li>
-            <a href="" target="_blank" rel="noopener noreferrer nofollow"><img src="./images/our-works/our-works-4.jpg"
-                alt="marketing photo" width="360" height="300" />
-              <div class="container-description">
+          <li class="project-list-item">
+            <a href="" target="_blank" rel="noopener noreferrer nofollow" class="project-list-link">
+              <img src="./images/our-works/our-works-4.jpg" alt="marketing photo" width="360" height="300" />
+              <div class="project-container-description">
                 <h2 class="projects-subtitle headline">Taxi Service</h2>
                 <p class="projects-text lead">Marketing</p>
               </div>
             </a>
           </li>
-          <li>
-            <a href="" target="_blank" rel="noopener noreferrer nofollow"><img src="./images/our-works/our-works-5.jpg"
-                alt="design photo" width="360" height="300" />
-              <div class="container-description">
+          <li class="project-list-item">
+            <a href="" target="_blank" rel="noopener noreferrer nofollow" class="project-list-link">
+              <img src="./images/our-works/our-works-5.jpg" alt="design photo" width="360" height="300" />
+              <div class="project-container-description">
                 <h2 class="projects-subtitle headline">Screen Illustrations</h2>
                 <p class="projects-text lead">Design</p>
               </div>
             </a>
           </li>
-          <li>
-            <a href="" target="_blank" rel="noopener noreferrer nofollow"><img src="./images/our-works/our-works-6.jpg"
-                alt="marketing photo" width="360" height="300" />
-              <div class="container-description">
+          <li class="project-list-item">
+            <a href="" target="_blank" rel="noopener noreferrer nofollow" class="project-list-link">
+              <img src="./images/our-works/our-works-6.jpg" alt="marketing photo" width="360" height="300" />
+              <div class="project-container-description">
                 <h2 class="projects-subtitle headline">Online Courses</h2>
                 <p class="projects-text lead">Marketing</p>
               </div>
             </a>
           </li>
-          <li>
-            <a href="" target="_blank" rel="noopener noreferrer nofollow"><img src="./images/our-works/our-works-7.jpg"
-                alt="design photo" width="360" height="300" />
-              <div class="container-description">
+          <li class="project-list-item">
+            <a href="" target="_blank" rel="noopener noreferrer nofollow" class="project-list-link">
+              <img src="./images/our-works/our-works-7.jpg" alt="design photo" width="360" height="300" />
+              <div class="project-container-description">
                 <h2 class="projects-subtitle headline">
                   Instagram Stories Concept
                 </h2>
@@ -124,19 +124,19 @@
               </div>
             </a>
           </li>
-          <li>
-            <a href="" target="_blank" rel="noopener noreferrer nofollow"><img src="./images/our-works/our-works-8.jpg"
-                alt="web site photo" width="360" height="300" />
-              <div class="container-description">
+          <li class="project-list-item">
+            <a href="" target="_blank" rel="noopener noreferrer nofollow" class="project-list-link">
+              <img src="./images/our-works/our-works-8.jpg" alt="web site photo" width="360" height="300" />
+              <div class="project-container-description">
                 <h2 class="projects-subtitle headline">Organic Food</h2>
                 <p class="projects-text lead">Web Site</p>
               </div>
             </a>
           </li>
-          <li>
-            <a href="" target="_blank" rel="noopener noreferrer nofollow"><img src="./images/our-works/our-works-9.jpg"
-                alt="web site photo" width="360" height="300" />
-              <div class="container-description">
+          <li class="project-list-item">
+            <a href="" target="_blank" rel="noopener noreferrer nofollow" class="project-list-link">
+              <img src="./images/our-works/our-works-9.jpg" alt="web site photo" width="360" height="300" />
+              <div class="project-container-description">
                 <h2 class="projects-subtitle headline">Fresh Coffee</h2>
                 <p class="projects-text lead">Web Site</p>
               </div>
@@ -147,13 +147,46 @@
     </div>
   </main>
   <footer class="footer main-brg-text">
-    <div class="container">
-      <div class="container-footer">
+    <div class="container container-footer">
+      <div class="footer-logo">
         <a href="./index.html" class="logo">web<span class="logo logo-text-footer">Studio</span></a>
         <p class="footer-text">
           Increase the flow of customers and sales for your business with digital
           marketing & growth solutions.
         </p>
+      </div>
+      <div class="footer-soc">
+        <p class="footer-soc-text">Social media</p>
+        <ul class="footer-soc-list">
+          <li class="footer-soc-item">
+            <a class="footer-soc-link">
+              <svg class="footer-icons">
+                <use href="/images/icons.svg#icon-instagram-footer"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-soc-item">
+            <a class="footer-soc-link">
+              <svg class="footer-icons">
+                <use href="/images/icons.svg#icon-twitter-footer"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-soc-item">
+            <a class="footer-soc-link">
+              <svg class="footer-icons">
+                <use href="/images/icons.svg#icon-facebook-footer"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-soc-item">
+            <a class="footer-soc-link">
+              <svg class="footer-icons">
+                <use href="/images/icons.svg#icon-linkedin-footer"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
       </div>
     </div>
   </footer>
