--- a/index.html
+++ b/index.html
@@ -347,28 +347,28 @@
         <p class="footer-soc-text">Social media</p>
         <ul class="footer-soc-list">
           <li class="footer-soc-item">
-            <a class="footer-soc-link">
+            <a href="" class="footer-soc-link">
               <svg class="footer-icons">
                 <use href="/images/icons.svg#icon-instagram-footer"></use>
               </svg>
             </a>
           </li>
           <li class="footer-soc-item">
-            <a class="footer-soc-link">
+            <a href="" class="footer-soc-link">
               <svg class="footer-icons">
                 <use href="/images/icons.svg#icon-twitter-footer"></use>
               </svg>
             </a>
           </li>
           <li class="footer-soc-item">
-            <a class="footer-soc-link">
+            <a href="" class="footer-soc-link">
               <svg class="footer-icons">
                 <use href="/images/icons.svg#icon-facebook-footer"></use>
               </svg>
             </a>
           </li>
           <li class="footer-soc-item">
-            <a class="footer-soc-link">
+            <a href="" class="footer-soc-link">
               <svg class="footer-icons">
                 <use href="/images/icons.svg#icon-linkedin-footer"></use>
               </svg>
