--- a/index.html
+++ b/index.html
@@ -183,21 +183,21 @@
                 <li class="team-soc-item">
                   <a href="" class="team-soc-link">
                     <svg class="team-icons">
-                      <use href="/images/icons.svg#icon-twitter"></use>
+                      <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-soc-item">
                   <a href="" class="team-soc-link">
                     <svg class="team-icons">
-                      <use href="/images/icons.svg#icon-facebook"></use>
+                      <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-soc-item">
                   <a href="" class="team-soc-link">
                     <svg class="team-icons">
-                      <use href="/images/icons.svg#icon-linkedin"></use>
+                      <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </a>
                 </li>
@@ -222,21 +222,21 @@
                 <li class="team-soc-item">
                   <a href="" class="team-soc-link">
                     <svg class="team-icons">
-                      <use href="/images/icons.svg#icon-twitter"></use>
+                      <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-soc-item">
                   <a href="" class="team-soc-link">
                     <svg class="team-icons">
-                      <use href="/images/icons.svg#icon-facebook"></use>
+                      <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-soc-item">
                   <a href="" class="team-soc-link">
                     <svg class="team-icons">
-                      <use href="/images/icons.svg#icon-linkedin"></use>
+                      <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </a>
                 </li>
@@ -261,21 +261,21 @@
                 <li class="team-soc-item">
                   <a href="" class="team-soc-link">
                     <svg class="team-icons">
-                      <use href="/images/icons.svg#icon-twitter"></use>
+                      <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-soc-item">
                   <a href="" class="team-soc-link">
                     <svg class="team-icons">
-                      <use href="/images/icons.svg#icon-facebook"></use>
+                      <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-soc-item">
                   <a href="" class="team-soc-link">
                     <svg class="team-icons">
-                      <use href="/images/icons.svg#icon-linkedin"></use>
+                      <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </a>
                 </li>
@@ -349,28 +349,28 @@
           <li class="footer-soc-item">
             <a href="" class="footer-soc-link">
               <svg class="footer-icons">
-                <use href="/images/icons.svg#icon-instagram-footer"></use>
+                <use href="./images/icons.svg#icon-instagram-footer"></use>
               </svg>
             </a>
           </li>
           <li class="footer-soc-item">
             <a href="" class="footer-soc-link">
               <svg class="footer-icons">
-                <use href="/images/icons.svg#icon-twitter-footer"></use>
+                <use href="./images/icons.svg#icon-twitter-footer"></use>
               </svg>
             </a>
           </li>
           <li class="footer-soc-item">
             <a href="" class="footer-soc-link">
               <svg class="footer-icons">
-                <use href="/images/icons.svg#icon-facebook-footer"></use>
+                <use href="./images/icons.svg#icon-facebook-footer"></use>
               </svg>
             </a>
           </li>
           <li class="footer-soc-item">
             <a href="" class="footer-soc-link">
               <svg class="footer-icons">
-                <use href="/images/icons.svg#icon-linkedin-footer"></use>
+                <use href="./images/icons.svg#icon-linkedin-footer"></use>
               </svg>
             </a>
           </li>
