--- a/index.html
+++ b/index.html
@@ -144,21 +144,21 @@
                 <li class="team-soc-item">
                   <a href="" class="team-soc-link">
                     <svg class="team-icons">
-                      <use href="/images/icons.svg#icon-twitter"></use>
+                      <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-soc-item">
                   <a href="" class="team-soc-link">
                     <svg class="team-icons">
-                      <use href="/images/icons.svg#icon-facebook"></use>
+                      <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="team-soc-item">
                   <a href="" class="team-soc-link">
                     <svg class="team-icons">
-                      <use href="/images/icons.svg#icon-linkedin"></use>
+                      <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </a>
                 </li>
