--- a/portfolio.html
+++ b/portfolio.html
@@ -161,28 +161,28 @@
           <li class="footer-soc-item">
             <a class="footer-soc-link">
               <svg class="footer-icons">
-                <use href="/images/icons.svg#icon-instagram-footer"></use>
+                <use href="./images/icons.svg#icon-instagram-footer"></use>
               </svg>
             </a>
           </li>
           <li class="footer-soc-item">
             <a class="footer-soc-link">
               <svg class="footer-icons">
-                <use href="/images/icons.svg#icon-twitter-footer"></use>
+                <use href="./images/icons.svg#icon-twitter-footer"></use>
               </svg>
             </a>
           </li>
           <li class="footer-soc-item">
             <a class="footer-soc-link">
               <svg class="footer-icons">
-                <use href="/images/icons.svg#icon-facebook-footer"></use>
+                <use href="./images/icons.svg#icon-facebook-footer"></use>
               </svg>
             </a>
           </li>
           <li class="footer-soc-item">
             <a class="footer-soc-link">
               <svg class="footer-icons">
-                <use href="/images/icons.svg#icon-linkedin-footer"></use>
+                <use href="./images/icons.svg#icon-linkedin-footer"></use>
               </svg>
             </a>
           </li>
